--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">wishare</string>
+    <string name="app_name">WiShare</string>
+    <string name="btn_add_network">Add Network</string>
+    <string name="btn_manage_contacts">Manage Contacts</string>
+    <string name="btn_my_invitations">My Invitations</string>
+    <string name="scroll_network_list">Network List</string>
 </resources>
