--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="btn_manage_contacts">Manage Contacts</string>
     <string name="btn_my_invitations">My Invitations</string>
     <string name="scroll_network_list">Network List</string>
+    <string name="configuredNetWorkListName">Configured Networks</string>
 </resources>
