--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -7,13 +7,13 @@
     <string name="configuredNetWorkListName">Configured Networks</string>
 
     <string-array name="time_limits">
-        <Item>Never</Item>
-        <Item>1 hour</Item>
-        <Item>3 hours</Item>
-        <Item>12 hours</Item>
-        <Item>1 day</Item>
-        <Item>2 day</Item>
-        <Item>1 week</Item>
-        <Item>Custom</Item>
+        <item>Never</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>12 hours</item>
+        <item>1 day</item>
+        <item>2 day</item>
+        <item>1 week</item>
+        <item>Custom</item>
     </string-array>
 </resources>
